--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DyDio</title>
-	<LINK HREF='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400'
-        REL='STYLESHEET' TYPE='TEXT/CSS'>
+	<!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400'
+        rel='stylesheet' type='text/css'>-->
 
 		
 	<link rel="stylesheet" href="../assets/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
 	<script src="bundle.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="../assets/js/gmap.js"></script>
+	<!--<script type="text/javascript" src="../assets/js/gmap.js"></script>-->
 	<script type="text/javascript" src="../assets/js/jquery.slimscroll.min.js"></script>
 
 </body>
