--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DyDio</title>
-	<!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400'
-        rel='stylesheet' type='text/css'>-->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400'
+        rel='stylesheet' type='text/css'>
 
 		
 	<link rel="stylesheet" href="../assets/css/font-awesome.min.css">
